--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "joi": "^17.3.0",
+    "joi-objectid": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.0",
     "koa-body": "^4.2.0",
