--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "nodemon": "^2.0.6"
   },
   "dependencies": {
+    "aws-sdk": "^2.804.0",
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "joi": "^17.3.0",
